--- a/inscripcion.html
+++ b/inscripcion.html
@@ -2,8 +2,12 @@
 <html>
 <head>
 	<title>manada</title>
+	<!--icon-->
+	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="/favicon.ico" type="image/x-icon">
+	<!--icon-->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="styles.css">
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
@@ -11,42 +15,43 @@
 <body>
 
 <header>
-<div class="top-menu">
-	<div class="social-media">
-		<p>Seguinos en nuestras redes!<img src="media/right-arrow.png"></p>
-		<a class="yt" href="https://www.youtube.com/channel/UCVvzv-yYEnPAYITBfjCriYg"><img src="media/youtube.png"></a>
-		<a href="https://www.twitch.tv/9zteam"><img src="media/twitch.png"></a>
-		<a class="ig" href="https://www.instagram.com/9zteam/?hl=es-la"><img src="media/instagram.png"></a>
+	<div class="top-menu">
+		<div class="social-media">
+			<p>Seguinos en nuestras redes!<img src="media/right-arrow.png"></p>
+			<a class="yt" href="https://www.youtube.com/channel/UCVvzv-yYEnPAYITBfjCriYg"><img src="media/youtube.png"></a>
+			<a href="https://www.twitch.tv/9zteam"><img src="media/twitch.png"></a>
+			<a class="ig" href="https://www.instagram.com/9zteam/?hl=es-la"><img src="media/instagram.png"></a>
+		</div>
 	</div>
-</div>
-<!--top-menu-->
+	<!--top-menu-->
 
-<!--menu-->
-<nav class="menu">
-	<img class="logo" src="media/mnd-logo-w.svg">
-	<ul>
-		<li><a href="home.html">Home</a></li>
-		<li><a href="galeria.html">Galería</a></li>
-		<li><a href="nosotros.html">Nosotros</a></li>
-		<li><a href="productos.html">Productos</a></li>
-		<li><a href="inscripcion.html">Inscribite!</a></li>
-	</ul>
-	<div class="search-box">
-	<input type="text" class="buscador" placeholder="Buscar...">
-	<img class="search-icon" src="media/search-icon.png">		
-	</div>
-</nav>
+	<!--menu-->
+	<nav class="menu">
+		<img class="logo" src="media/mnd-logo-w.svg">
+		<ul>
+			<li><a href="index.html">Home</a></li>
+			<li><a href="galeria.html">Galería</a></li>
+			<li><a href="nosotros.html">Nosotros</a></li>
+			<li><a href="productos.html">Productos</a></li>
+			<li><a href="inscripcion.html">Inscribite!</a></li>
+		</ul>
+		<div class="search-box">
+		<input type="text" class="buscador" placeholder="Buscar...">
+		<img class="search-icon" src="media/search-icon.png">		
+		</div>
+	</nav>
 </header>
 
 <form class="form">
-  <h2>CONTACTANOS</h2>
-  <p type="Nombre:"><input placeholder="Escribe tu nombre aqui.."></input></p>
-  <p type="Email:"><input placeholder="Dejanos saber como contactar contigo.."></input></p>
-  <p type="Mensaje:"><input placeholder="Que te gustaria decirnos.."></input></p>
-  <button>Enviar</button>
-  <div>
-    <span class="telefonoContacto"></span>011 1223 5673
-    <span class="emailContacto"></span> mndcompany@gmail.com
-  </div>
+	<h2>CONTACTANOS</h2>
+	  <p type="Nombre:"><input placeholder="Escribe tu nombre aqui.."></input></p>
+	  <p type="Email:"><input placeholder="Dejanos saber como contactar contigo.."></input></p>
+	  <p type="Mensaje:"><input placeholder="Que te gustaria decirnos.."></input></p>
+	  <button>Enviar</button>
+	<div>
+	  <span class="telefonoContacto"></span>011 1223 5673
+	  <span class="emailContacto"></span> mndcompany@gmail.com
+	</div>
 </form>
 </body>
+</html>
