--- a/productos.html
+++ b/productos.html
@@ -2,8 +2,12 @@
 <html>
 <head>
 	<title>manada</title>
+	<!--icon-->
+	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="/favicon.ico" type="image/x-icon">
+	<!--icon-->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="styles.css">
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
@@ -25,7 +29,7 @@
 <nav class="menu">
 	<img class="logo" src="media/mnd-logo-w.svg">
 	<ul>
-		<li><a href="home.html">Home</a></li>
+		<li><a href="index.html">Home</a></li>
 		<li><a href="galeria.html">Galería</a></li>
 		<li><a href="nosotros.html">Nosotros</a></li>
 		<li><a href="productos.html">Productos</a></li>
@@ -81,3 +85,5 @@
 	</div>
 </div>
 </section>
+</body>
+</html>
