--- a/galeria.html
+++ b/galeria.html
@@ -7,7 +7,7 @@
 	<link rel="icon" href="/favicon.ico" type="image/x-icon">
 	<!--icon-->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="css/styles.css">
+	<link rel="stylesheet" type="text/css" href="styles.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;700&display=swap" rel="stylesheet">
 </head>
