--- a/productos.html
+++ b/productos.html
@@ -2,15 +2,13 @@
 <html>
 <head>
 	<title>manada</title>
-	<!--icon-->
-	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-	<link rel="icon" href="/favicon.ico" type="image/x-icon">
-	<!--icon-->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="styles.css">
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+	<meta name="description=" content="En esta seccion encontraras todas nuestros productos!">
+	<meta name="keywords" content="Esports accesorios, Equipo, remeras CSGO, camperas Fortnite, FNCS, tazas Valorant,">
 </head>
 <body>
 
@@ -29,7 +27,7 @@
 <nav class="menu">
 	<img class="logo" src="media/mnd-logo-w.svg">
 	<ul>
-		<li><a href="index.html">Home</a></li>
+		<li><a href="home.html">Home</a></li>
 		<li><a href="galeria.html">Galería</a></li>
 		<li><a href="nosotros.html">Nosotros</a></li>
 		<li><a href="productos.html">Productos</a></li>
@@ -49,7 +47,7 @@
 <section class="seccionIndumentaria">
 <h2 class="indumentaria">Indumentaria</h2>
 
-<div class="containerProductos">
+<div class="containerIndumentaria">
 	<div class="image">
 		<a href="#"><img src="media/productos/productocampera.jpg"></a>
 		
@@ -85,5 +83,23 @@
 	</div>
 </div>
 </section>
-</body>
-</html>
+
+<section class="seccionHardware">
+	<h2 class="hardware">Hardware</h2>
+	
+	<div class="containerHardware">
+		<div class="image">
+			<a href="#"><img src="media/hardware/hardwaremother.jpg"></a>
+			
+		</div>
+		<div class="image">
+			<a href="#"><img src="media/hardware/hardwaremother2.jpg"></a>
+		</div>
+		<div class="image">
+			<a href="#"><img src="media/hardware/hardwareauriculares.jpg"></a>
+		</div>
+		<div class="image">
+			<a href="#"><img src="media/hardware/hardwareauriculares2.jpg"></a>
+		</div>
+	</div>
+	</section>
