--- a/galeria.html
+++ b/galeria.html
@@ -2,14 +2,12 @@
 <html>
 <head>
 	<title>manada</title>
-	<!--icon-->
-	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-	<link rel="icon" href="/favicon.ico" type="image/x-icon">
-	<!--icon-->
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="styles.css">
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;700&display=swap" rel="stylesheet">
+	<meta name="description=" content="En esta galeria encontraras todas nuestras fotos!">
+	<meta name="keywords" content="Esports fotos, Equipo, CSGO, Fortnite, FNCS, Valorant, Eventos Esports">
 </head>
 <body>
 
@@ -28,7 +26,7 @@
 <nav class="menu">
 	<img class="logo" src="media/mnd-logo-w.svg">
 	<ul>
-		<li><a href="index.html">Home</a></li>
+		<li><a href="home.html">Home</a></li>
 		<li><a href="galeria.html">Galería</a></li>
 		<li><a href="nosotros.html">Nosotros</a></li>
 		<li><a href="productos.html">Productos</a></li>
@@ -73,4 +71,3 @@
 </div>
 
 </body>
-</html>
