--- a/index.html
+++ b/index.html
@@ -8,10 +8,12 @@
 	<!--icon-->
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" type="text/css" href="styles.css">
+	<link rel="stylesheet" type="text/css" href="css/styles.css">
 	<link rel="preconnect" href="https://fonts.gstatic.com">
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400;700&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
+	<meta name="description=" content="La Manada es un equipo de Esports creado por amigos, creado por una familia">
+	<meta name="keywords" content="Esports, Equipo, CSGO, Fortnite, FNCS, Valorant">
 </head>
 <body>
 
@@ -30,7 +32,7 @@
 <nav class="menu">
 	<img class="logo" src="media/mnd-logo-w.svg">
 	<ul>
-		<li><a href="index.html">Home</a></li>
+		<li><a href="home.html">Home</a></li>
 		<li><a href="galeria.html">Galería</a></li>
 		<li><a href="nosotros.html">Nosotros</a></li>
 		<li><a href="productos.html">Productos</a></li>
